@@ -65,3 +65,10 @@ filebeat.config.modules:
 
   # Period on which files under path should be checked for changes
   #reload.period: 10s
+
+#==================== Elasticsearch template setting ==========================
+
+setup.template.settings:
+  index.number_of_shards: 3
+  #index.codec: best_compression
+  #_source.enabled: false
