@@ -1,5 +1,6 @@
 
 #==========================  Modules configuration ============================
+
 metricbeat.config.modules:
   # Glob pattern for configuration loading
   path: ${path.config}/modules.d/*.yml
@@ -11,6 +12,7 @@ metricbeat.config.modules:
   #reload.period: 10s
 
 #==================== Elasticsearch template setting ==========================
+
 setup.template.settings:
   index.number_of_shards: 1
   index.codec: best_compression
