@@ -66,14 +66,19 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 
 *Auditbeat*
 
+- Changed the number of shards in the default configuration to 3. {issue}5095[5095]
+
 *Filebeat*
 
 - Add PostgreSQL module with slowlog support. {pull}4763[4763]
 - Add Kafka log module. {pull}4885[4885]
 - Add support for `/var/log/containers/` log path in `add_kubernetes_metadata` processor. {pull}4981[4981]
 - Remove error log from runnerfactory as error is returned by API. {pull}5085[5085]
+- Changed the number of shards in the default configuration to 3. {issue}5095[5095]
 
 *Heartbeat*
+
+- Changed the number of shards in the default configuration to 1. {issue}5095[5095]
 
 *Metricbeat*
 
@@ -84,9 +89,11 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 
 *Packetbeat*
 
+- Changed the number of shards in the default configuration to 3. {issue}5095[5095]
+
 *Winlogbeat*
 
-*Auditbeat*
+- Changed the number of shards in the default configuration to 3. {issue}5095[5095]
 
 ==== Deprecated
 
